Creates a function that keeps track of the number of laps made by several cars in a race.

--- a/.gitignore
+++ b/.gitignore
@@ -212,4 +212,7 @@ fabric.properties
 
 .idea/
 
+#main files
+*-main.c
+
 # End of https://www.toptal.com/developers/gitignore/api/jetbrains,c,emacs
