--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-
-# Created by https://www.toptal.com/developers/gitignore/api/jetbrains,c,emacs
-# Edit at https://www.toptal.com/developers/gitignore?templates=jetbrains,c,emacs
+# Created by https://www.toptal.com/developers/gitignore/api/emacs,c,python
+# Edit at https://www.toptal.com/developers/gitignore?templates=emacs,c,python
 
 ### C ###
 # Prerequisites
@@ -107,112 +106,142 @@ flycheck_*.el
 /network-security.data
 
 
-### JetBrains ###
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+### Python ###
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 
-# User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
+# C extensions
 
-# Generated files
-.idea/**/contentModel.xml
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# Sensitive or high-churn files
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-.idea/**/dbnavigator.xml
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
 
-# Gradle
-.idea/**/gradle.xml
-.idea/**/libraries
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
 
-# Gradle and Maven with auto-import
-# When using Gradle or Maven with auto-import, you should exclude module files,
-# since they will be recreated, and may cause churn.  Uncomment if using
-# auto-import.
-# .idea/artifacts
-# .idea/compiler.xml
-# .idea/jarRepositories.xml
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
-# *.iml
-# *.ipr
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+pytestdebug.log
 
-# CMake
-cmake-build-*/
+# Translations
+*.mo
+*.pot
 
-# Mongo Explorer plugin
-.idea/**/mongoSettings.xml
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
 
-# File-based project format
-*.iws
+# Flask stuff:
+instance/
+.webassets-cache
 
-# IntelliJ
-out/
+# Scrapy stuff:
+.scrapy
 
-# mpeltonen/sbt-idea plugin
-.idea_modules/
+# Sphinx documentation
+docs/_build/
+doc/_build/
 
-# JIRA plugin
-atlassian-ide-plugin.xml
+# PyBuilder
+target/
 
-# Cursive Clojure plugin
-.idea/replstate.xml
+# Jupyter Notebook
+.ipynb_checkpoints
 
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
+# IPython
+profile_default/
+ipython_config.py
 
-# Editor-based Rest Client
-.idea/httpRequests
+# pyenv
+.python-version
 
-# Android studio 3.1+ serialized cache file
-.idea/caches/build_file_checksums.ser
+# pipenv
+#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+#   However, in case of collaboration, if having platform-specific dependencies or dependencies
+#   having no cross-platform support, pipenv may install dependencies that don't work, or not
+#   install all needed dependencies.
+#Pipfile.lock
 
-### JetBrains Patch ###
-# Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+__pypackages__/
 
-# *.iml
-# modules.xml
-# .idea/misc.xml
-# *.ipr
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
 
-# Sonarlint plugin
-# https://plugins.jetbrains.com/plugin/7973-sonarlint
-.idea/**/sonarlint/
+# SageMath parsed files
+*.sage.py
 
-# SonarQube Plugin
-# https://plugins.jetbrains.com/plugin/7238-sonarqube-community-plugin
-.idea/**/sonarIssues.xml
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+pythonenv*
 
-# Markdown Navigator plugin
-# https://plugins.jetbrains.com/plugin/7896-markdown-navigator-enhanced
-.idea/**/markdown-navigator.xml
-.idea/**/markdown-navigator-enh.xml
-.idea/**/markdown-navigator/
+# Spyder project settings
+.spyderproject
+.spyproject
 
-# Cache file creation bug
-# See https://youtrack.jetbrains.com/issue/JBR-2257
-.idea/$CACHE_FILE$
+# Rope project settings
+.ropeproject
 
-# CodeStream plugin
-# https://plugins.jetbrains.com/plugin/12206-codestream
-.idea/codestream.xml
+# mkdocs documentation
+/site
 
-.idea/
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
 
-#main files
-*-main.c
+# Pyre type checker
+.pyre/
 
-# End of https://www.toptal.com/developers/gitignore/api/jetbrains,c,emacs
+# pytype static type analyzer
+.pytype/
+
+# profiling data
+.prof
+
+# End of https://www.toptal.com/developers/gitignore/api/emacs,c,python
